@@ -1,4 +1,6 @@
 Version 0.8.11   - xx April 2002
+  * Add --badexcept option to warn when using string exceptions or
+        classes not derived from Exception to raise/catch exceptions
   * Fix spurious warnings from using (test and 'true' or 'false)
 
 Version 0.8.10   - 20 March 2002
